--- a/musicPlay/music.html
+++ b/musicPlay/music.html
@@ -5,11 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>music play</title>
 <link rel="icon" type="imgs/png" href="http://jesseshowalter.com/favicon.png" />
-<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1468850457_7071311.css">
+<link rel="stylesheet" type="text/css" href="http:at.alicdn.com/t/font_1468850457_7071311.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
-<!-- <script src="js/scripts/jquery-1.11.2.js"></script> -->
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="js/scripts/jquery-1.11.2.js"></script>
 </head>
 <body>
     <div class="wrapper">
