--- a/resume/resume-t.html
+++ b/resume/resume-t.html
@@ -35,10 +35,10 @@
 				<h1>
 					PROBLEM SOLVING <br> IN 
 					<span class="flipup">
-						<span class="rotating flip up" style="display: inline-block; transform: rotateX(-180deg);">
-			    <span class="front"> CSS</span>
-			    <span class="back"> Javascript</span>
-			  </span>
+						<span class="rotating flip up">
+						    <span class="front"> CSS</span>
+						    <span class="back"> Javascript</span>
+				  		</span>
 					</span>
 				</h1>
 
