--- a/resume/resume.html
+++ b/resume/resume.html
@@ -12,13 +12,13 @@
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/wodry.css">
-<link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_1468241895_9049811.css">
+<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1468241895_9049811.css">
 </head>
 <body>
 <header class="siteTop-wrapper" id="top-js">
 	<nav class="clearfix">
 		<ul>
-			<li><a href="#">Work</a></li>
+			<li><a href="#project">Work</a></li>
 			<li><a href="#">Articles</a></li>
 			<li><a href="#">Bio</a></li>
 			<li class="last"><a href="#">Contact</a></li>
@@ -48,7 +48,7 @@
 			</article>			
 		</div>
 	</section>
-	<section class="projects">
+	<section class="projects" id="project">
 		<div class="wrapper clearfix">
 			<h2 class="ribbon">
 				<span class="ribbon-content">Recent Projects</span>
