--- a/resume/resume.html
+++ b/resume/resume.html
@@ -4,15 +4,23 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+
 <title>Front - End Developer | FeiHan</title>
 <link rel="icon" type="image/png" href="images/favicon.png" />
-<meta http-equiv="Content-Language" content="EN">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Merriweather:400,700,300,300italic,900|Open+Sans:300italic,400italic,400,300,700)">
+<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1468241895_9049811.css">
+
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/wodry.css">
-<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1468241895_9049811.css">
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
 </head>
 <body>
 <header class="siteTop-wrapper" id="top-js">
@@ -173,11 +181,13 @@
 	<footer>
 		<div class="wrapper">
 			<div class="soc clearfix">
-				<a class="github" href="#"><span class="per-iconfont icon-github"></span></a>
+				<a class="github" href="https://github.com/fei-han">
+					<span class="per-iconfont icon-github"></span>
+				</a>
 				<a class="sina" href="#"><span class="per-iconfont icon-sina"></span></a>
-				<a class="email" href="#"><span class="per-iconfont icon-email"></span></a>
+				<a class="email" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=GyItLyIuIisoKFtqajV4dHY"><span class="per-iconfont icon-email"></span></a>
 			</div>
-			<small>© Jesse Showalter 2016  &nbsp;-&nbsp; Honolulu, Hi &nbsp;-&nbsp; <a href="#">iamjesseshowalter@gmail.com</a></small>
+			<small>© copyright 费晗 2016 &nbsp;-&nbsp;Hi &nbsp;-&nbsp;<a href="mailto:feihanghj@gmail.com">feihanghj@gmail.com</a></small>
 		</div>
 	</footer>
 	<div class="sub-footer tooltip-top" data-tooltip="Back to the Top">
@@ -223,6 +233,7 @@
        </li>
        <li>
         <input type="submit" class=formbtn value="SUBMIT">
+
        </li>
        </ul>
       </form>
