--- a/CSS3 menu/index.html
+++ b/CSS3 menu/index.html
@@ -8,36 +8,42 @@
 </head>
 <body>
 <div class="wrapper clearfix">
-	<div class="content lf clearfix">
-	   <span class="share"><i class="bg"></i></span>
-	   <div class="desp">
-		   	<p class="title">分享</p>
-	    	<p class="count">11723</p>
-	   </div>
-    	
-    </div>
-    <div class="content clearfix">
-    	<span class="collect"><i class="bg"></i></span>
-    	<div class="desp">
-	    	<p class="title">收藏</p>
-	    	<p class="count">11723</p>
-    	</div>
-    </div>
-    <div class="content lf clearfix">
-    	<span class="iPhone"><i class="bg"></i></span>
-    	<div class="desp">
-	    	<p class="title">用手机看</p>
-	    	<p class="count">11723</p>
-    	</div>
-    </div>
-    <div class="content lf clearfix">
-    	<span class="icon"><i class="bg"></i></span>
-    	<div class="desp">
-	    	<p class="title">硬币</p>
-	    	<p class="count">11723</p>
-    	</div>
+<div class="share lf">
+    <div class="clearfix">
+        <span class="share-bg conment"></span>
+        <div class="desp">
+            <h1>分享</h1>
+            <p>11755</p>
+        </div>
     </div>
 </div>
-    
+<div class="collect lf">
+    <div class="clearfix">
+        <span class="collect-bg conment"></span>
+        <div class="desp">
+            <h1>分享</h1>
+            <p>11755</p>
+        </div>
+    </div>
+</div>
+<div class="iPhone lf">
+    <div class="clearfix">
+        <span class="iPhone-bg conment"></span>
+        <div class="desp">
+            <h1>分享</h1>
+            <p>11755</p>
+        </div>
+    </div>
+</div>
+<div class="coin lf">
+    <div class="clearfix">
+        <span class="coin-bg conment"></span>
+        <div class="desp">
+            <h1>分享</h1>
+            <p>11755</p>
+        </div>
+    </div>
+</div>
+</div>   
 </body>
 </html>
