--- a/jd/index.html
+++ b/jd/index.html
@@ -147,6 +147,9 @@
     </div>
   </nav>
 </div>
+<div class="big-bg">
+  <a href="javaScript:void(0)" class="activity-focus-bg"></a>
+</div>
 <div class="list-slides-news-service-wrapper  wrapper clearfix">
   <div class="product-category clearfix">
     <ul class="menu">
@@ -391,17 +394,16 @@
           <div class="submenu">内容15</div>
         </li>
     </ul>
-    
   </div>
       <div class="artSlides clearfix">
-         <img src="http://img12.360buyimg.com/da/jfs/t2857/256/1452752818/101291/afca65c1/573ee1ebN06312488.jpg" alt="" width="730" height="454">
-         <img src="http://img20.360buyimg.com/da/jfs/t2854/97/1132509358/155045/6244031f/5735959eN11f82ea5.jpg" alt="" width="730" height="454">
-         <img src="http://img12.360buyimg.com/da/jfs/t2605/45/1390918490/101426/a6d4c333/573e86e4N1a5c9424.jpg" alt="" width="730" height="454">
-         <img src="http://img10.360buyimg.com/da/jfs/t2584/110/1391193267/93128/24d6eeb8/573e6a48N9b32769c.jpg" alt="" width="730" height="454">
-         <img src="http://img20.360buyimg.com/da/jfs/t2665/177/1455254342/56503/5b5a6f40/573ee1a4N13947f29.jpg" alt="" width="730" height="454">
-         <img src="http://img12.360buyimg.com/da/jfs/t2704/157/1435833264/136894/59293934/573ea901Ndb3ca841.jpg" alt="" width="730" height="454">
+         <img src="imgs/slides/slide1.jpg" alt="618" width="730" height="454">
+         <img src="imgs/slides/slide2.jpg" alt="cumputer" width="730" height="454">
+         <img src="imgs/slides/slide3.jpg" alt="meizu" width="730" height="454">
+         <img src="imgs/slides/slide4.jpg" alt="book" width="730" height="454">
+         <img src="imgs/slides/slide5.jpg" alt="finace" width="730" height="454">
+         <img src="imgs/slides/slide6.jpg" alt="household" width="730" height="454">
          <a class="slidesjs-previous slidesjs-navigation jd-iconfont i-btn-left" href="#"></a>
-          <a class="slidesjs-next slidesjs-navigation jd-iconfont i-btn-right" href="#"></a>
+         <a class="slidesjs-next slidesjs-navigation jd-iconfont i-btn-right" href="#"></a>
     </div>
     
      <aside>
