--- a/musicPlay/index.html
+++ b/musicPlay/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="referrer" content="no-referrer">
 <title>music play</title>
-<link rel="icon" type="imgs/png" href="imgs/music.png" />
+<link rel="icon" type="imgs/png" href="imgs/favicon.png" />
 <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_1469876470_5415266.css">
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
