--- a/lazy-watefull-ajax/index.html
+++ b/lazy-watefull-ajax/index.html
@@ -70,7 +70,7 @@
     </div>
 
 
-<script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="scripts/jquery-1.11.2.js"></script>
 <script>
 	var clock
 	$(window).on('scroll',function(){
