--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,302 +3,151 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+<title>Web前端开发</title>
+<style>
+	*{margin: 0; padding: 0;}
+	body{
+		font-family: 'Microsoft Yahei', '\5FAE\8F6F\96C5\9ED1', Arial, 'Hiragino Sans GB', '\5B8B\4F53';
+   		color: #2f2f2f;
+	}
+	a{text-decoration: none;}
+	ul,li{list-style: disc inside;}
+	.container{
+		margin-left: auto;
+		margin-right: auto;
+		width: 960px;
+	}
+	h1{
+		font-size: 30px;
+		text-align: center;
+		margin: 20px 0;
+	}
+	.baseInfo .title,
+	.project .title,
+	.skill .title,
+	.education .title,
+	.blog .title{
+		height: 50px;
+		line-height: 50px;
+		font-size: 20px;
+		font-weight: 700;
+		padding-left: 30px;
+		background-color: #ddd
+	}
+	.baseInfo ul{
+		width: 96%;
+		margin: 10px auto;
+		overflow: hidden;
+	}
+	.container .baseInfo ul li{
+		float: left;
+		width: 50%;
+		line-height: 1;
+		font-size: 16px;
+		padding: 10px 0px;
+	}
+	.container .project ul,
+	.container .skill ul,
+	.container .education ul,
+	.container .blog ul{
+		width: 96%;
+		margin: 10px auto;
+	}
+	.container .project ul li,
+	.container .skill ul li,
+	.container .education ul li,
+	.container .blog ul li{
+		line-height: 1;
+		font-size: 16px;
+		padding: 10px 0px;
+	}
+	.container .project ul li a{
+		font-size: 18px;
+		color: #2f2f2f;
+		font-weight: 700;
+	}
+	.container .project ul li p{
+		padding: 8px 15px;
+		line-height: 1.5;
 
-<title>Front - End Developer | FeiHan</title>
-<link rel="icon" type="image/png" href="images/favicon.png" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Merriweather:400,700,300,300italic,900|Open+Sans:300italic,400italic,400,300,700)">
-<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1468241895_9049811.css">
-
-<link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/common.css">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/wodry.css">
-
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
+	}
+    .container .blog li a{
+        color: #2f2f2f;
+    }
+</style>
 </head>
 <body>
-<header class="siteTop-wrapper" id="top-js">
-	<nav class="clearfix">
-		<ul>
-			<li><a href="#project">Work</a></li>
-			<li><a href="#">Articles</a></li>
-			<li><a href="#">Bio</a></li>
-			<li class="last"><a href="#">Contact</a></li>
-		</ul>
-		<div class="control">
-			<a href="#" class="logo buzz-out"><h1>beyond</h1></a>
-			<a id="nav-toggle" href="#"><span></span></a>
-		</div>
-	</nav>
-</header>
-
-<div class="siteHome-wrapper">
-	<section class="hero">
-		<div class="wrapper clearfix">
-			<article class="message">
-				<h1>
-			      PROBLEM SOLVING <br> IN 
-			      <span class="flipup">
-			          <span class="wodryRX">
-			               HTML|CSS|javascript|jQuery
-			          </span>
-			      </span>
-			    </h1>
-
-				<p>Hi i'm Jesse, I'm a Designer and Developer. I focus on user problems and provide genuine solutions. I specialize in brand identity, web design, UI and UX design and of course... front end development.</p>
-				<a class="btn" href="#modal">Let's work together</a>
-			</article>			
-		</div>
-	</section>
-	<section class="projects" id="project">
-		<div class="wrapper clearfix">
-			<h2 class="ribbon">
-				<span class="ribbon-content">Recent Projects</span>
-			</h2>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-hawaiian.png">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-memorate.png">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>		
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-hawaiifirst-rwd.jpg">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-littlebig-rwd.jpg">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-matsumoto-rwd.jpg">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-sasquatch.png">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-augustine.png">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-jimmygirl.png">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-			<article>
-				<a href="#">
-					<img src="images/projects/project-tlr.png">
-					<h3>Hawaiian Airlines</h3>
-					<p>UX,UI,Development</p>
-				</a>
-			</article>
-		</div>
-	</section>
-	<section class="bio">
-		<div class="wrapper">
-			<article>
-				<div class="bio-content">
-					<h2>Let me explain... No there is too much... let me sum up.</h2>
-					<p>What do Web Development, Sleek Modern Design, Punk Rock Music, Theology, and Family all have in common? The answer is... <a href="info.html">Jesse Showalter</a>. I love all these things and more, click to find out a bit more about the man behind the website.</p>
-					<a class="btn" href="info.html">Get the full story</a>
-				</div>
-			</article>
-		</div>
-	</section>
-	<section class="skillSet">
-		<div class="wrapper">
-			<div class="skillSet-inner clearfix">
-				<h2 class="ribbon">
-					<span class="ribbon-content">What I do</span>
-				</h2>
-				<article class="skill">
-					<h3>Web Design</h3>
-					<p>Designing for the web is not a job it's a lifestyle. As technology changes so does the challenge.</p>
-				</article>
-				<article class="skill">
-					<h3>Web Design</h3>
-					<p>Designing for the web is not a job it's a lifestyle. As technology changes so does the challenge.</p>
-				</article>
-				<article class="skill">
-					<h3>Web Design</h3>
-					<p>Designing for the web is not a job it's a lifestyle. As technology changes so does the challenge.</p>
-				</article>
-				<article class="skill">
-					<h3>Web Design</h3>
-					<p>Designing for the web is not a job it's a lifestyle. As technology changes so does the challenge.</p>
-				</article>
-			</div>
-		</div>
-	</section>
-	<section class="latest">
-		<div class="wrapper clearfix">
-			<article class="blo">
-				<div class="latest-content">
-					<h2>Hawaii First</h2>
-					<a class=btn href="#">Latest Case Study</a>
-				</div>
-			</article>
-			<article class="foundry">
-				<div class="latest-content">
-					<h2>CSS Dark Overlays</h2>
-					<a class=btn href="#">Latest Blog Post</a>
-				</div>
-			</article>
-		</div>
-	</section>
-	<footer>
-		<div class="wrapper">
-			<div class="soc clearfix">
-				<a class="github" href="https://github.com/fei-han">
-					<span class="per-iconfont icon-github"></span>
-				</a>
-				<a class="sina" href="#"><span class="per-iconfont icon-sina"></span></a>
-				<a class="email" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=GyItLyIuIisoKFtqajV4dHY"><span class="per-iconfont icon-email"></span></a>
-			</div>
-			<small>© copyright 费晗 2016 &nbsp;-&nbsp;Hi &nbsp;-&nbsp;<a href="mailto:feihanghj@gmail.com">feihanghj@gmail.com</a></small>
-		</div>
-	</footer>
-	<div class="sub-footer tooltip-top" data-tooltip="Back to the Top">
-    	<a href="#" class="back-to-top gotop-js">Back to top</a>
-   		<span class="tip">Back To The Top</span>
-  </div>
-</div>
-
-<script src="js/scripts/jquery-1.11.2.js"></script>
-<script src="js/animationHeader.js"></script>
-<div class="modal-dialog" id="modal">
-  <div class="cover"></div>
-  <div class="modal-content">
-    <div class="modal-head">
-      <div class="close"></div>
-      <h2 class="ribbon">
-		 <span class="ribbon-content">Contact Me</span>
-	  </h2>
-      <img src="http://www.jesseshowalter.com/assets/images/icon-email.svg" alt="">
+    <div class="container">
+    	<h1>费晗</h1>
+    	<div class="baseInfo">
+    		<p class="title">个人概况</p>
+    		<ul>
+    			<li>求职意向： Web前端开发工程师 </li>
+    			<li>工作经验： 一年以内</li>
+    			<li>待遇要求： 面议</li>
+    			<li>出生日期：1993年6月1日（女）</li>
+    			<li>邮箱：feihanghj@gmail.com</li>
+    			<li>电话：13527967519</li>
+    		</ul>
+    	</div>
+    	<div class="project">
+    		<p class="title">项目经验</p>
+    		<ul>
+    			<li>
+    				<a href="http://fredah.coding.me/projects/JD/JDindex.html" target="_blank">1- 仿京东页面</a>
+    				<p class="intemIntro">简介：还原京东商城页面，实现像素级重构，加深了对HTML+CSS布局与样式的了解；主要使用HTML+CSS、jQuery
+    				</p>
+    			</li>
+    			<li>
+    				<a href="http://fredah.coding.me/projects/Apple%20slide/" target="_blank">2- Apple Slides</a>
+    				<p class="intemIntro">简介：简单的Apple轮播效果；主要使用HTML+CSS、jQuery
+    				</p>
+    			</li>
+    			<li>
+    				<a href="http://fredah.coding.me/projects/simpleMusic/" target="_blank">3-音乐播放器</a>
+    				<p class="intemIntro">简介：支持切歌，调节播放进度，单曲循环；主要使用HTML+CSS、jQuery
+    				</p>
+    			</li>
+    			<li>
+    				<a href="http://fredah.coding.me/projects/css3Menu/css3Menu.html" target="_blank">4- 动画菜单按钮</a>
+    				<p class="intemIntro">简介：一组动画菜单按钮；主要使用HTML+CSS3
+    				</p>
+    			</li>
+    			<li>
+    				<a href="https://github.com/fei-han/fei-han.github.io/tree/master/plugs/ObjectSlides" target="_blank">5- 轮播插件</a>
+    				<p class="intemIntro">简介：面向对象的轮播插件，代码清晰，实现可复用性，不依赖CSS；主要使用jQuery
+    				</p>
+    			</li>
+                <li>
+                    <a href="http://fredah.coding.me/FredaH/resume/" target="_blank">6- 作品展示</a>
+                    <p class="intemIntro">简介：用来展示项目作品；主要使用HTML+CSS3、jQuery
+                    </p>
+                </li>
+    		</ul>
+    	</div>
+    	<div class="skill">
+    		<p class="title">技能&知识</p>
+    		<ul>
+    			<li>熟悉HTML+CSS布局，遵循W3C规范，编写有语义化、模块化的页面代码</li>
+    			<li>熟悉JavaScript、jQuery，实现日常交互效果</li>
+    			<li>了解Ajax工作原理和实现方法，了解HTTP协议</li>
+    			<li>熟练使用Git、Emmet、Markdown等前端开发工具</li>
+    			<li>了解Bootsrap、Vue、React等常见前端框架</li>
+    			<li>熟练使用PhotoShop切图，像素级重构</li>
+    		</ul>
+    	</div>
+    	<div class="education">
+    		<p class="title">教育经历</p>
+    		<ul><li>2012.8——2015.11    武汉生物工程学院     计算机网络技术</li></ul>
+    	</div>
+    	<div class="blog">
+    		<p class="title">博客地址</p>
+    		<ul>
+	    		<li>个人博客： <a href="http://freda.leanote.com/" target="_blank">http://freda.leanote.com/</a></li>
+				<li>Github地址： <a href="https://github.com/fei-han" target="_blank">https://github.com/fei-han</a></li>
+			</ul>
+    	</div>
+    	
     </div>
-    <div class="form-content">
-      <form action="">
-        <ul>
-        <li class=heighterror>  
-          <lable class=title for=name>姓名</lable>
-          <div>
-            <input type="text" class="panel" id=name name=name placeholder="只能是字母、数字、下划线，3-10个字符">
-          </div>
-          <p class="error">不能为空</p>
-          </li>
-       <li> 
-          <lable class=title for=name>邮箱</lable>
-          <div>
-            <input type="password" class="panel" id=password name="password" placeholder="mysupermail@mail.com">
-          </div>
-          <p class="error">邮箱格式不正确</p>
-       </li>
-       <li>
-        <lable class=title for=conment>留言</lable>
-        <div>
-          <textarea name="conment" class="panel" id="conment"  cols="30" rows="10"></textarea>
-       </div>
-       </li>
-       <li>
-        <input type="submit" class=formbtn value="SUBMIT">
-
-       </li>
-       </ul>
-      </form>
-  	</div>
-  </div>
-</div>
-<script src="js/wodry.js"></script>
-<script>
-(function(){
-	/*------navShow------*/
-	$.goNavShow($('#top-js'))
-	/*------topNav------*/
-	var $navToggle = $('#nav-toggle');
-	var $menu = $('nav ul');
-	$navToggle.on('click',function(e){
-		e.preventDefault()
-	  $menu.slideToggle(250);
-	  this.classList.toggle('active')
-	})
-	$(window).resize(function(){
-		var resizeW=$(window).width();
-		resizeW>320&&$menu.is(':hidden')&&$menu.removeAttr('style')
-	})
-	/*------gotoTop------*/
-	$('.gotop-js').on('click',function(e){
-		e.preventDefault()
-		$('body,html').animate({scrollTop: 0},'slow')
-	})
-	/*------modal------*/
-	var $last = $('li.last')
-	var $modalCt = $('#modal')
-	var $close = $('.close')
-	var $cover = $('.cover')
-	$last.on('click',function(e){
-	 $('body').addClass('remodal') /*隐藏body的其他内容*/
-	  $modalCt.show()
-	})
-	$close.on('click',function(e){
-	  $modalCt.hide()
-	  $('body').removeClass('remodal')
-	})
-	$cover.on('click',function(){
-	  $modalCt.hide()
-	  $('body').removeClass('remodal')
-	})
-	$('.hero a').on('click',function(e){
-      e.preventDefault()
-	  $modalCt.show()
-	  $('body').addClass('remodal')	  
-	})
-	/*------projects mouseenter------*/
-	 $('.projects').on('mouseenter','article',function(){
-		$(this).siblings().addClass('dim')
-	}).on('mouseleave','article',function(){
-		$(this).siblings().removeClass('dim')
-	})
-	/*------文字翻转------*/
-	$('.wodryRX').wodry({
-	    animation: 'rotateX',
-	    delay: 1500,
-	    animationDuration: 800
-	});
-})(jQuery)
-	
-
-</script>
 </body>
 </html>
