--- a/waterFall/index.html
+++ b/waterFall/index.html
@@ -36,8 +36,33 @@
 		background-color: #006ac1;
 	}
 </style>
+</head>
+<body>
 
-<script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+	<div class="container">
+		<div class="items h1">1</div>
+		<div class="items h3">2</div>
+		<div class="items h2">3</div>
+		<div class="items h4">4</div>
+		<div class="items h2">5</div>
+		<div class="items h3">6</div>
+		<div class="items h4">7</div>
+		<div class="items h1">8</div>
+		<div class="items h2">9</div>
+		<div class="items h4">10</div>
+		<div class="items h3">11</div>
+		<div class="items h4">12</div>
+		<div class="items h2">13</div>
+		<div class="items h1">14</div>
+		<div class="items h3">15</div>
+		<div class="items h2">16</div>
+		<div class="items h4">17</div>
+		<div class="items h2">18</div>
+		<div class="items h4">19</div>
+		<div class="items h3">20</div>
+	</div>
+
+<script src="scripts/jquery-1.11.2.js"></script>
 <script>
 
 	function render(){
@@ -75,32 +100,6 @@
 
 
 </script>
-
-</head>
-<body>
-
-	<div class="container">
-		<div class="items h1">1</div>
-		<div class="items h3">2</div>
-		<div class="items h2">3</div>
-		<div class="items h4">4</div>
-		<div class="items h2">5</div>
-		<div class="items h3">6</div>
-		<div class="items h4">7</div>
-		<div class="items h1">8</div>
-		<div class="items h2">9</div>
-		<div class="items h4">10</div>
-		<div class="items h3">11</div>
-		<div class="items h4">12</div>
-		<div class="items h2">13</div>
-		<div class="items h1">14</div>
-		<div class="items h3">15</div>
-		<div class="items h2">16</div>
-		<div class="items h4">17</div>
-		<div class="items h2">18</div>
-		<div class="items h4">19</div>
-		<div class="items h3">20</div>
-	</div>
 
 </body>
 </html>
