--- a/resume/index.html
+++ b/resume/index.html
@@ -121,7 +121,7 @@
 				</article>
 				<article class="skill">
 					<h3>jQuery</h3>
-					<p>熟悉jQuery框架，实现日常交互效果。了解Vue，React，Bootsrap等常见前端框架</p>
+					<p>熟悉jQuery框架，实现日常交互效果。了解Vue，Bootsrap等常见前端框架</p>
 				</article>
 				<article class="skill">
 					<h3>Other</h3>
@@ -158,7 +158,7 @@
 			<small>
 				© copyright 费晗 2016 &nbsp;-&nbsp;
 				<a href="https://github.com/fei-han/myresume/tree/master/resume" target="_blank">Open source: GitHub </a>
-				<br>本页面素材源自http://www.jesseshowalter.com
+				<br>本页面素材源自 http://www.jesseshowalter.com
 			</small>
 		</div>
 	</footer>
