--- a/resume/resume.html
+++ b/resume/resume.html
@@ -87,7 +87,7 @@
     			<li>待遇要求： 面议</li>
     			<li>出生日期：1993年6月1日（女）</li>
     			<li>邮箱：feihanghj@gmail.com</li>
-    			<li>电话：13527967519</li>
+    			<li>电话：135 2796 7519</li>
     		</ul>
     	</div>
     	<div class="project">
@@ -132,7 +132,8 @@
     			<li>熟悉JavaScript、jQuery，实现日常交互效果</li>
     			<li>了解Ajax工作原理和实现方法，了解HTTP协议</li>
     			<li>熟练使用Git、Emmet、Markdown等前端开发工具</li>
-    			<li>了解Bootsrap、Vue、React等常见前端框架</li>
+    			<li>了解Bootsrap、Vue等常见前端框架</li>
+                <li>了解RequireJS、Gulp构建</li>
     			<li>熟练使用PhotoShop切图，像素级重构</li>
     		</ul>
     	</div>
