--- a/resume/resume.html
+++ b/resume/resume.html
@@ -119,7 +119,12 @@
     				</p>
     			</li>
                 <li>
-                    <a href="http://fredah.coding.me/FredaH/resume/" target="_blank">6- 作品展示</a>
+                    <a href="http://fredah.coding.me/FredaH/resume/" target="_blank">6- 计算器</a>
+                    <p class="intemIntro">简介：加减乘除运算；主要使用HTML+CSS3、jQuery
+                    </p>
+                </li>
+                <li>
+                    <a href="http://fredah.coding.me/FredaH/resume/" target="_blank">7- 作品展示</a>
                     <p class="intemIntro">简介：用来展示项目作品；主要使用HTML+CSS3、jQuery
                     </p>
                 </li>
