--- a/resume/resume.html
+++ b/resume/resume.html
@@ -90,6 +90,18 @@
     			<li>电话：135 2796 7519</li>
     		</ul>
     	</div>
+        <div class="skill">
+            <p class="title">技能&知识</p>
+            <ul>
+                <li>熟悉HTML+CSS布局，遵循W3C规范，编写有语义化、模块化的页面代码</li>
+                <li>熟悉JavaScript、jQuery，实现日常交互效果</li>
+                <li>了解Ajax工作原理和实现方法，了解HTTP协议</li>
+                <li>熟练使用Git、Emmet、Markdown等前端开发工具</li>
+                <li>了解Bootsrap、Vue等常见前端框架</li>
+                <li>了解RequireJS、Gulp构建</li>
+                <li>熟练使用PhotoShop切图，像素级重构</li>
+            </ul>
+        </div>
     	<div class="project">
     		<p class="title">项目经验</p>
     		<ul>
@@ -104,47 +116,36 @@
     				</p>
     			</li>
     			<li>
-    				<a href="http://fredah.coding.me/projects/simpleMusic/" target="_blank">3-音乐播放器</a>
-    				<p class="intemIntro">简介：支持切歌，调节播放进度，单曲循环；主要使用HTML+CSS、jQuery
+    				<a href="http://fredah.coding.me/projects/musicPlay/" target="_blank">3-音乐播放器</a>
+    				<p class="intemIntro">简介：支持切歌，调节播放进度，单曲循环；主要使用HTML+CSS、jQuery、Ajax
     				</p>
     			</li>
-    			<li>
+    			<!-- <li>
     				<a href="http://fredah.coding.me/projects/css3Menu/css3Menu.html" target="_blank">4- 动画菜单按钮</a>
     				<p class="intemIntro">简介：一组动画菜单按钮；主要使用HTML+CSS3
     				</p>
-    			</li>
+    			</li> -->
     			<li>
-    				<a href="https://github.com/fei-han/fei-han.github.io/tree/master/plugs/ObjectSlides" target="_blank">5- 轮播插件</a>
+    				<a href="https://github.com/fei-han/fei-han.github.io/tree/master/plugs/ObjectSlides" target="_blank">4- 轮播插件</a>
     				<p class="intemIntro">简介：面向对象的轮播插件，代码清晰，实现可复用性，不依赖CSS；主要使用jQuery
     				</p>
     			</li>
                 <li>
-                    <a href="http://fredah.coding.me/FredaH/resume/" target="_blank">6- 计算器</a>
+                    <a href="http://fredah.coding.me/projects/calculator/" target="_blank">5- 计算器</a>
                     <p class="intemIntro">简介：加减乘除运算；主要使用HTML+CSS3、jQuery
                     </p>
                 </li>
                 <li>
-                    <a href="http://fredah.coding.me/FredaH/resume/" target="_blank">7- 作品展示</a>
+                    <a href="http://fredah.coding.me/FredaH/resume/" target="_blank">6- 作品展示</a>
                     <p class="intemIntro">简介：用来展示项目作品；主要使用HTML+CSS3、jQuery
                     </p>
                 </li>
     		</ul>
     	</div>
-    	<div class="skill">
-    		<p class="title">技能&知识</p>
-    		<ul>
-    			<li>熟悉HTML+CSS布局，遵循W3C规范，编写有语义化、模块化的页面代码</li>
-    			<li>熟悉JavaScript、jQuery，实现日常交互效果</li>
-    			<li>了解Ajax工作原理和实现方法，了解HTTP协议</li>
-    			<li>熟练使用Git、Emmet、Markdown等前端开发工具</li>
-    			<li>了解Bootsrap、Vue等常见前端框架</li>
-                <li>了解RequireJS、Gulp构建</li>
-    			<li>熟练使用PhotoShop切图，像素级重构</li>
-    		</ul>
-    	</div>
+    	
     	<div class="education">
     		<p class="title">教育经历</p>
-    		<ul><li>2012.8——2015.11    武汉生物工程学院     计算机网络技术</li></ul>
+    		<ul><li>2012.8——2015.11    武汉生物工程学院   &nbsp  计算机网络技术</li></ul>
     	</div>
     	<div class="blog">
     		<p class="title">博客地址</p>
