--- a/lazy-watefall-ajax/index.html
+++ b/lazy-watefall-ajax/index.html
@@ -41,7 +41,7 @@
 	    margin: 10px;
 	    width: 260px;
 	}
-	#pic-ct .item .header{
+	#pic-ct .item .title{
 		height: 25px;
 	    margin: 0 12px;
 	    border-bottom: 1px solid #DBDBDB;
@@ -74,7 +74,9 @@
 
 
 <script src="scripts/jquery-1.11.2.js"></script>
+<script src="scripts/goTop.js"></script>
 <script>
+	$(document).goTop()
 	var clock;
 	$(window).on('scroll', function(){
     //用户鼠标滚轮滚动一次，有多次事件响应。下面的 setTimeout 主要是为性能考虑，只在最后一次事件响应的时候执行 checkshow
