--- a/resume/index.html
+++ b/resume/index.html
@@ -117,7 +117,7 @@
 				</article>
 				<article class="skill">
 					<h3>javaScript</h3>
-					<p>熟悉JavaScript，了解Ajax工作原理和实现方法，了解ECMAScript新标准与HTTP协议</p>
+					<p>熟悉JavaScript、Ajax工作原理和实现方法，了解HTTP协议</p>
 				</article>
 				<article class="skill">
 					<h3>jQuery</h3>
